fix: navbar z-index issue, removed line header

--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -13,7 +13,7 @@ $navbar-backdrop-filter: blur(25px);
   top: 0;
   left: 0;
   width: 100vw;
-  z-index: 100;
+  z-index: 9999;
   transition: background-color 0.3s ease backdrop-filter 0.3s ease border-bottom
     0.3s ease;
   padding: 1rem 0;
